<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ejerciciofinal.SignUpFragment">

    <RelativeLayout
        android:id="@+id/btnSignUpContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:paddingBottom="20dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tvUpdateInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_register_user"
                style="@style/BlueTextStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/allFields"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/allFields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/etUser"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_insert_name" />

                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/label_insert_last_name" />

                <TextView
                    android:id="@+id/tvSpinnerTitle"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/label_title" />

                <Spinner
                    android:id="@+id/spinnerTitle"
                    app:layout_constraintTop_toBottomOf="@id/tvSpinner"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="5dp"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hint_type_email" />

                <TextView
                    android:id="@+id/tvSex"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/label_sex" />

                <RadioGroup
                    android:id="@+id/rgSex"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMujer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:text="@string/label_woman" />

                    <RadioButton
                        android:id="@+id/rbHombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:text="@string/label_man" />

                </RadioGroup>

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hint_type_password"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/tvCheckBox"
                    app:layout_constraintTop_toBottomOf="@id/spinnerMexicanStates"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/label_terms" />

                <CheckBox
                    android:id="@+id/cbAcceptConditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/label_accept_terms"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/label_register_user"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/allFields" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>

</ScrollView>